// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-badge should render with _label="**Te**xt" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            <strong>
              Te
            </strong>
            xt
          </span>
          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Badge fallback" _smartButton={"_ariaDescription":"Badge label","_label":"Remove"} 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge kol-badge--has-smart-button" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span" id="badge-label-nonce">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Badge fallback
          </span>
          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
        </span>
      </span>
      <div class="kol-badge__smart-button kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
        <button aria-controls="badge-label-nonce" aria-description="Badge label" aria-label="Remove" class="kol-button__button" type="button">
          <span class="kol-button__text kol-span kol-span--hide-label">
            <span class="kol-span__container">
              <span aria-hidden="true" class="kol-span__slot" hidden="">
                <slot name="expert" slot="expert"></slot>
              </span>
            </span>
          </span>
        </button>
        <div class="kol-button__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  Remove
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _color="#000000" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" _color="#000000" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;
